[package]
name = "keyspace"
version = "0.1.2"
edition = "2024"
license = "MIT"
authors = ["Victor Farazdagi <farazdagi@gmail.com>"]
description = "Dynamic key space partitioning and re-balancing for distributed systems"
homepage = "https://github.com/farazdagi/keyspace"
repository = "https://github.com/farazdagi/keyspace"
documentation = "https://docs.rs/keyspace"
readme = "README.md"
keywords = ["consistent-hashing"]
categories = ["algorithms", "data-structures"]


[dependencies]
