[package]
name = "keyspace"
version = "1.0.0"
edition = "2024"
license = "MIT"
authors = ["Victor Farazdagi <farazdagi@gmail.com>"]
description = "Keyspace partitioning and re-balancing for distributed systems"
homepage = "https://github.com/farazdagi/keyspace"
repository = "https://github.com/farazdagi/keyspace"
documentation = "https://docs.rs/keyspace"
readme = "README.md"
keywords = ["consistent-hashing"]
categories = ["algorithms", "data-structures"]


[dependencies]
thiserror = "2.0"
hrw-hash = "2.0"
auto_impl = "1.3"
rapidhash = "3.0"
parking_lot = "0.12"
